# Morpheus

./: .env.example  .gitignore  .morpheus-llbase-all.yaml  AGENTS.md  CHANGELOG.md  README.md  RECOVERY_JUNE18_20_NOTES.md  install-dependencies.sh  morpheus.example.yaml  morpheus.o2p.yaml  morpheus.yaml  package.json  paseo.json  pnpm-lock.yaml  tsconfig.base.json
.claude/skills/: omssr-buildroot  omssr-libvmm  omssr-llbic  omssr-llcg  omssr-microkit-sdk  omssr-morpheus  omssr-nvirsh  omssr-qemu  omssr-sel4
.codex/skills/: omssr-buildroot  omssr-libvmm  omssr-llbic  omssr-llcg  omssr-microkit-sdk  omssr-morpheus  omssr-nvirsh  omssr-qemu  omssr-sel4
.codex/skills/omssr-buildroot/: SKILL.md
.codex/skills/omssr-libvmm/: SKILL.md
.codex/skills/omssr-llbic/: SKILL.md
.codex/skills/omssr-llcg/: SKILL.md
.codex/skills/omssr-microkit-sdk/: SKILL.md
.codex/skills/omssr-morpheus/: SKILL.md  schema.json
.codex/skills/omssr-nvirsh/: SKILL.md
.codex/skills/omssr-qemu/: SKILL.md
.codex/skills/omssr-sel4/: SKILL.md
.github/workflows/: publish-docs.yml  publish-llbase-images.yml
apps/cli/: package.json
apps/cli/src/: index.ts
apps/docs/: components.json  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.test.json  vite.config.ts
apps/docs/app/: globals.css  layout.tsx  page.tsx
apps/docs/components/: docs-shell.tsx
apps/docs/lib/: catalog.ts  markdown.ts  types.ts
apps/docs/src/: catalog.ts  index.html  main.ts  styles.css  themes.ts
apps/docs/tests/: test_app.ts  test_themes.ts
apps/morpheus/: README.md  package.json  tool.json  tsconfig.json
apps/morpheus/src/: cli.ts  config-check.ts  config.ts  contracts.ts  io.ts  libvmm.ts  llbic.ts  llcg.ts  logger.ts  managed-state.ts  microkit-sdk.ts  nvirsh.ts  paths.ts  qemu.ts  remote.ts  run-layout.ts  runs.ts  sel4.ts  streaming-exec.ts  tool-descriptor.ts  tools.ts  trace.ts  workflow-runs.ts  workflow.ts  workspace.ts
apps/morpheus/test/: cli.test.js  dependency-resolver.test.js  nvirsh.test.js  remote-all-tools-smoke.js  root-config.test.js
apps/outline-editor/: package.json  tsconfig.json
apps/outline-editor/.next/: app-build-manifest.json  prerender-manifest.json  trace
apps/outline-editor/app/: globals.css  layout.tsx  page.tsx
apps/outline-editor/components/: outline-editor.tsx
apps/outline-editor/lib/: outline-store.ts  outline-text.ts
apps/outline-editor/tests/: outline-text.test.ts
apps/runs-viewer/: README.md  install-dependencies.sh  package.json  tailwind.config.ts  tsconfig.json  tsconfig.test.json  vite.config.ts
apps/runs-viewer/.tsbuild/: vite.config.js
apps/runs-viewer/app/: globals.css  layout.tsx  page.tsx
apps/runs-viewer/components/: workflow-interactive-graph.tsx  workflow-viewer.tsx
apps/runs-viewer/src/: index.html  main.ts  styles.css  types.ts
apps/runs-viewer/tests/: test_action_routes.ts  test_morpheus_client.ts  test_run_root.ts  test_runs_store.ts  test_viewer_contract.ts
apps/web/: .gitignore  README.md  package.json
apps/web/config/: repos.txt
apps/web/scripts/: build_site.py  dev_server.py  (+1 more)
docs/: cli-conventions.md
projects/hyperarm/: README.md  fuzzing-workflow.md  morpheus.yaml  run-libafl-fuzzing-raw.sh  run-libafl-fuzzing.sh  run-libafl-replay.sh
projects/hyperarm/workspace/tools/libafl/patches/overlay/crates/libafl_nesting/: Cargo.toml  README.md
projects/hyperarm/workspace/tools/libafl/patches/overlay/crates/libafl_nesting/c_src/: libafl_nesting_stub.c
projects/hyperarm/workspace/tools/libafl/patches/overlay/crates/libafl_nesting/src/: encoding.rs  generator.rs  input.rs  lib.rs  mutator.rs  qemu_bridge.rs  stub.rs
projects/hyperarm/workspace/tools/libafl/patches/overlay/fuzzers/full_system/qemu_nesting/: Cargo.toml  Justfile  README.md
projects/hyperarm/workspace/tools/libafl/patches/overlay/fuzzers/full_system/qemu_nesting/src/: fuzzer_breakpoint.rs  main.rs
projects/o2p/: morpheus.yaml
scripts/: enable-cache.mjs  install-bin.mjs
scripts/microkit/: build-sdk.mjs
scripts/nvirsh/: prepare-sel4-deps.mjs
skills/omssr-buildroot/: SKILL.md
skills/omssr-libafl/: SKILL.md
skills/omssr-libvmm/: SKILL.md
skills/omssr-llbase/: SKILL.md
skills/omssr-llbic/: SKILL.md
skills/omssr-llcg/: SKILL.md
skills/omssr-microkit-sdk/: SKILL.md
skills/omssr-morpheus/: SKILL.md
skills/omssr-nqc2/: SKILL.md
skills/omssr-nvirsh/: SKILL.md
skills/omssr-outline-to-paper/: SKILL.md
skills/omssr-pkvm-aarch64/: SKILL.md
skills/omssr-qemu/: SKILL.md
skills/omssr-sel4/: SKILL.md
tools/buildroot/: README.md  package.json  tool.json
tools/driver-callgraph/: index.js  tool.json
tools/libafl/: README.md  tool.json
tools/libvmm/: README.md  SKILL.md  package.json  tool.json
tools/llbase/: .dockerignore  README.md  docker-compose.yml  tool.json
tools/llbic/: README.md  docker-compose.yml  llbic  tool.json
tools/llcg/: .gitignore  CMakeLists.txt  README.md  llcg  tool.json
tools/llcg/src/KallGraph/: .gitignore  CMakeLists.txt  README.md
tools/llcg/src/KallGraph/SVF-3.3/svf-llvm/: CMakeLists.txt
tools/llcg/src/KallGraph/SVF-3.3/svf-llvm/include/SVF-LLVM/: LLVMUtil.h
tools/llcg/src/KallGraph/SVF-3.3/svf/include/Graphs/: SVFGOPT.h
tools/llcg/src/KallGraph/SVF-3.3/svf/lib/DDA/: DDAClient.cpp
tools/llcg/src/KallGraph/src/: CMakeLists.txt  KallGraph.cpp  irgen.sh
tools/llcg/src/KallGraph/src/include/: Util.hpp
tools/llcg/src/KallGraph/src/lib/: KallGraphAlgo.cpp  Util.cpp
tools/llcg/src/llvm-cg/: CMakeLists.txt
tools/llcg/src/llvm-cg/include/: DevilangCG.h  IO.h  LLVMCallGraph.h
tools/llcg/src/llvm-cg/src/: DevilangCG.cpp  LLVMCallGraph.cpp
tools/microkit-sdk/: README.md  package.json  tool.json
tools/nqc2/: README.md  tool.json
tools/nvirsh/: README.md  package.json  tool.json  tsconfig.json
tools/outline-to-paper/: index.js  outline-markdown.js  package.json  tool.json
tools/pkvm-aarch64/: README.md  tool.json
tools/qemu/: README.md  package.json  tool.json
tools/sel4/: README.md  package.json  tool.json
workflows/kernel-callgraph/: README.md
(+539 files in other folders)
