[package]
name = "qemu_nesting"
version = "0.16.0"
authors = [
  "Qiang Liu <cyruscyliu@gmail.com>",
]
edition = "2021"

[features]
default = ["std", "breakpoint", "arm"]
std = []

arm = ["libafl_qemu/arm"]
breakpoint = []

[profile.release]
incremental = true
debug = true
lto = "fat"
codegen-units = 1

[dependencies]
libafl = { path = "../../../crates/libafl" }
libafl_bolts = { path = "../../../crates/libafl_bolts" }
libafl_targets = { path = "../../../crates/libafl_targets" }
libafl_qemu = { path = "../../../crates/libafl_qemu", default-features = false, features = [
  "systemmode",
] }
libafl_nesting = { path = "../../../crates/libafl_nesting" }
env_logger = "0.11.5"
